--- a/package.json
+++ b/package.json
@@ -6,10 +6,23 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/axios": "^0.14.0",
+    "@types/bootstrap": "^5.1.4",
+    "@types/react-bootstrap": "^0.32.26",
+    "@types/react-paginate": "^7.1.1",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/sweetalert": "^2.0.4",
+    "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-hook-form": "^7.15.2",
+    "react-paginate": "^7.1.3",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "sweetalert": "^2.1.2",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
